Add extended scAtlas analysis functions and UI refinements
- Add 9 analysis functions to scAtlas: organ signatures, cell type signatures,
  tumor vs adjacent, normal vs cancer, immune infiltration, T cell exhaustion,
  CAF signatures, adjacent tissue field effect, pan-cancer signatures
- Update cross-atlas analysis with additional comparison metrics
- Minor UI adjustments to visualization

--- a/visualization/index.html
+++ b/visualization/index.html
@@ -4138,8 +4138,10 @@
         function initBiochemScatterSigs() {
             const scatterData = state.data.cimabiochemscatter;
             if (!scatterData) return;
-            biochemScatterSigs.cytosig = scatterData.cytosig_signatures || [];
-            biochemScatterSigs.secact = scatterData.secact_signatures || [];
+            // Data uses 'cytokines' key for CytoSig cytokine names
+            biochemScatterSigs.cytosig = scatterData.cytokines || [];
+            // SecAct not available in scatter data - show CytoSig as fallback
+            biochemScatterSigs.secact = scatterData.cytokines || [];
         }
 
         function getBiochemScatterSigs() {
