--- a/visualization/index.html
+++ b/visualization/index.html
@@ -3964,59 +3964,79 @@
                 d.signature_type === sigType || (!d.signature_type && sigType === 'CytoSig')
             );
 
+            // Build lookup index for fast access
+            const dataIndex = {};
+            filteredData.forEach(d => {
+                const key = `${d.cell_type}|${d.signature}`;
+                dataIndex[key] = d.mean_activity;
+            });
+
             // Get cell types and signatures
             const cellTypes = [...new Set(filteredData.map(d => d.cell_type))];
-            const signatures = [...new Set(filteredData.map(d => d.signature))];
+            const allSignatures = [...new Set(filteredData.map(d => d.signature))];
+
+            // Find most variable signatures (for SecAct with 1000+ proteins)
+            const sigVariance = {};
+            allSignatures.forEach(sig => {
+                const vals = cellTypes.map(ct => dataIndex[`${ct}|${sig}`] || 0);
+                if (vals.length === 0) return;
+                const mean = vals.reduce((a, b) => a + b, 0) / vals.length;
+                const variance = vals.reduce((a, b) => a + Math.pow(b - mean, 2), 0) / vals.length;
+                sigVariance[sig] = variance;
+            });
+
+            // Limit to top 50 most variable signatures for readability
+            const maxSigs = sigType === 'CytoSig' ? allSignatures.length : 50;
+            const topSignatures = Object.entries(sigVariance)
+                .sort((a, b) => b[1] - a[1])
+                .slice(0, maxSigs)
+                .map(d => d[0])
+                .sort(); // alphabetical for display
 
             // Find most variable cell types
             const ctVariance = {};
             cellTypes.forEach(ct => {
-                const ctDataFiltered = filteredData.filter(d => d.cell_type === ct);
-                const vals = ctDataFiltered.map(d => d.mean_activity);
+                const vals = topSignatures.map(sig => dataIndex[`${ct}|${sig}`] || 0);
                 if (vals.length === 0) return;
                 const mean = vals.reduce((a, b) => a + b, 0) / vals.length;
                 const variance = vals.reduce((a, b) => a + Math.pow(b - mean, 2), 0) / vals.length;
                 ctVariance[ct] = variance;
             });
 
-            // Top 25 most variable
+            // Top 25 most variable cell types
             const topCts = Object.entries(ctVariance)
                 .sort((a, b) => b[1] - a[1])
                 .slice(0, 25)
                 .map(d => d[0]);
 
-            // Create matrix
+            // Create matrix using index (fast)
             const zData = topCts.map(ct =>
-                signatures.map(sig => {
-                    const match = filteredData.find(d => d.cell_type === ct && d.signature === sig);
-                    return match ? match.mean_activity : 0;
-                })
+                topSignatures.map(sig => dataIndex[`${ct}|${sig}`] || 0)
             );
 
             container.classList.remove('loading');
-
-            // Clear previous plot
             Plotly.purge(container);
 
-            if (topCts.length === 0 || signatures.length === 0) {
+            if (topCts.length === 0 || topSignatures.length === 0) {
                 container.innerHTML = '<p style="text-align: center; color: #666; padding: 2rem;">No data available for this signature type</p>';
                 return;
             }
 
+            const subtitle = sigType === 'SecAct' ? ` (top ${topSignatures.length} most variable)` : '';
             Plotly.newPlot(container, [{
                 z: zData,
-                x: signatures,
+                x: topSignatures,
                 y: topCts,
                 type: 'heatmap',
                 colorscale: [[0, '#a8d4e6'], [0.5, '#f5f5f5'], [1, '#f4a6a6']],
-                
                 zmid: 0,
                 colorbar: {title: 'Activity'},
                 hovertemplate: '<b>%{y}</b><br>%{x}: %{z:.2f}<extra></extra>'
             }], {
-                margin: {l: 180, r: 50, t: 30, b: 100},
+                margin: {l: 180, r: 50, t: 40, b: 100},
                 xaxis: {tickangle: 45},
-                height: 450
+                height: 450,
+                title: {text: sigType === 'SecAct' ? 'Top 50 Variable Proteins' : '', font: {size: 12}}
             }, {responsive: true});
         }
 
